tools: dependency update