@@ -39,7 +39,7 @@
 
 		<!-- version definitions -->
 		<lombok.version>1.18.18</lombok.version>
-		<byte-buddy.version>1.10.20</byte-buddy.version>
+		<byte-buddy.version>1.10.21</byte-buddy.version>
 		<jakarta-xml-bind.version>2.3.3</jakarta-xml-bind.version><!-- 2.3.3 -> 3.0.0 -->
 		<jakarta-transaction.version>1.3.3</jakarta-transaction.version><!-- 1.3.3 -> 2.0.0 -->
 		<jakarta-persistence.version>2.2.3</jakarta-persistence.version><!-- 2.2.3 -> 3.0.0 -->
@@ -50,9 +50,9 @@
 																still depends on javax.persistence -->
 		<hibernate-validator.version>6.2.0.Final</hibernate-validator.version>
 		<h2.version>1.4.200</h2.version>
-		<mockito.version>3.7.7</mockito.version>
-		<mockito-junit-jupiter.version>3.7.7</mockito-junit-jupiter.version>
-		<javafx.version>16-ea+7</javafx.version>
+		<mockito.version>3.8.0</mockito.version>
+		<mockito-junit-jupiter.version>3.8.0</mockito-junit-jupiter.version>
+		<javafx.version>17-ea+2</javafx.version>
 		<kryo.version>5.0.3</kryo.version>
 		<pecoff4j.version>0.3.2</pecoff4j.version>
 		<asm.version>9.1</asm.version>
@@ -67,7 +67,7 @@
 		<hikaricp.version>3.4.3</hikaricp.version><!-- 3.4.5/4.0.1 are not compatible with Spring Boot 2.4.0-M1 -->
 		<jboss-logging.version>3.4.1.Final</jboss-logging.version>
 		<commons-text.version>1.9</commons-text.version>
-		<equalsverifier.version>3.5.4</equalsverifier.version>
+		<equalsverifier.version>3.5.5</equalsverifier.version>
 	</properties>
 
 	<dependencies>
@@ -427,10 +427,10 @@
 					<encoding>UTF-8</encoding>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
-					<compilerArgs>
-						<!-- when testing java preview features -->
-						<!--&#45;&#45;enable-preview-->
-					</compilerArgs>
+					<!--<compilerArgs>-->
+					<!-- when testing java preview features -->
+					<!--&#45;&#45;enable-preview-->
+					<!--</compilerArgs>-->
 					<annotationProcessorPaths>
 						<path>
 							<!-- Creates .dat file for log4j custom appenders -->
@@ -444,6 +444,21 @@
 							<version>${lombok.version}</version>
 						</path>
 					</annotationProcessorPaths>
+
+					<!-- jdk 16 fix until lombok's next update -->
+					<fork>true</fork>
+					<compilerArgs>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 				<dependencies>
 					<dependency>
